--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
     {
       "name": "ng-spring-boot",
       "dependencies": {
-        "angular": "~1.3.0",
-        "angular-resource": "~1.3.0",
+        "angular": "~1.4.6",
+        "angular-resource": "~1.4.6",
+        "angular-route": "~1.4.6",
         "bootstrap-css-only": "~3.2.0"
       }
     }
